--- a/redThon/templates/index.html
+++ b/redThon/templates/index.html
@@ -1,282 +1,47 @@
 <!DOCTYPE html>
+<link rel="stylesheet" href="{{url_for('static', filename='bootstrap.min.css') }}">
 <html lang="ko">
 <head>
     <meta charset="UTF-8">
     <title>{{title}}</title>
-    <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-    <link rel="stylesheet" href="https://pyscript.net/latest/pyscript.css" />
-    <script defer src="https://pyscript.net/latest/pyscript.js"></script>
-    <style>
-        .flip { 
-            width: 24.43%;
-            height: 200px;
-            position: relative;
-            perspective: 1100px;
-            float:left;
-            margin: 2px;
-          }
-          
-          .card {
-            width: 100%; 
-            height: 100%; 
-            position: relative;
-            transition: .4s;
-            transform-style: preserve-3d;
-          } 
-          
-          .front, .back {
-            position: absolute;
-            width: 100%; 
-            height: 100%;
-            backface-visibility: hidden;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            color: #fff;
-          }
-          
-          .front {
-            background: tomato; 
-          }
-          
-          .back { 
-            background: royalblue; 
-            transform: rotateY(180deg);
-          }
-
-          .card_lobby {
-            position:fixed;
-            width:100%;
-            height:100%;
-            background:green;
-            text-align:center;
-            color:white;
-          }
-
-          .card_lobby_subject {
-            font-size:22pt;
-            font-weight:bold;
-            margin:30px;
-          }
-          
-    </style>
 </head>
 <body>
+    {% extends 'header.html'%}
     {% block header %}
-    <!-- 카드게임 로비-->
-    <div class="card_lobby">
-        <div class="card_lobby_subject">카드 뒤집기 게임!</div>
-        <div class="card_lobby_content">
-            [카드 뒤집기 게임 규칙]<br/>
-            1. 화면에 16개의 카드가 보여진다.<br/>
-            2. 3초 후 카드가 모두 뒤집힌다.<br/>
-            3. 짝(문제-답)을 맞춘다.<br/>
+    <h2>신나는 파이썬!!!44</h2>
+    <a class="nav-link" href="{{ url_for('register') }}">회원가입=</a> 
+    
 
-            <button onclick="game_start();">게임 시작</button>
-            <button>랭킹 보기</button>
-        </div>
-        <div class="card_lobby_skip"><button>건너뛰기</button></div>
+    <!-- 원정선 추가 시작 -->
+    <div class="container my-3">
+        <table class="table">
+            <thead>
+            <tr class="thead-dark">
+                <th>번호</th>
+                <th>제목</th>
+                <th>작성일시</th>
+            </tr>
+            </thead>
+            <tbody>
+            {% if question_list %}
+            {% for question in question_list %}
+            <tr>
+                <td>{{ loop.index }}</td>
+                <td>
+                    <a href="{{url_for('question.detail', question_id=question.id)}}">{{ question.subject }}</a>
+                </td>
+                <td>{{question.create_date}}</td>
+            </tr>
+            {% endfor %}
+            {% else %}
+            <tr>
+                <td colspan="3">질문이 없습니다.</td>
+            </tr>
+            {% endif %}
+            </tbody>
+        </table>
     </div>
-    <!-- 카드게임 -->
-    <div class="card_main" style="display:none;">
-        <div class="flip 1">  
-            <div class="card 1">
-                <!-- 앞면 -->
-                <div class="front">1번 문제 카드</div>
-                <!-- 뒷면 -->
-                <div class="back">?</div>
-            </div>
-        </div>
-        <div class="flip 3">  
-            <div class="card 3">
-                <!-- 앞면 -->
-                <div class="front">3번 정답 카드</div>
-                <!-- 뒷면 -->
-                <div class="back">?</div>
-            </div>
-        </div>
-        <div class="flip 3">  
-            <div class="card 3">
-                <!-- 앞면 -->
-                <div class="front">3번 문제 카드</div>
-                <!-- 뒷면 -->
-                <div class="back">?</div>
-            </div>
-        </div>
-        <div class="flip 8">  
-            <div class="card 8">
-                <!-- 앞면 -->
-                <div class="front">8번 정답 카드</div>
-                <!-- 뒷면 -->
-                <div class="back">?</div>
-            </div>
-        </div>
-        <div class="flip 2">  
-            <div class="card 2">
-                <!-- 앞면 -->
-                <div class="front">2번 문제 카드</div>
-                <!-- 뒷면 -->
-                <div class="back">?</div>
-            </div>
-        </div>
-        <div class="flip 5">  
-            <div class="card 5">
-                <!-- 앞면 -->
-                <div class="front">5번 문제 카드</div>
-                <!-- 뒷면 -->
-                <div class="back">?</div>
-            </div>
-        </div>
-        <div class="flip 6">  
-            <div class="card 6">
-                <!-- 앞면 -->
-                <div class="front">6번 정답 카드</div>
-                <!-- 뒷면 -->
-                <div class="back">?</div>
-            </div>
-        </div>
-        <div class="flip 1">  
-            <div class="card 1">
-                <!-- 앞면 -->
-                <div class="front">1번 정답 카드</div>
-                <!-- 뒷면 -->
-                <div class="back">?</div>
-            </div>
-        </div>
-        <div class="flip 8">  
-            <div class="card 8">
-                <!-- 앞면 -->
-                <div class="front">8번 문제 카드</div>
-                <!-- 뒷면 -->
-                <div class="back">?</div>
-            </div>
-        </div>
-        <div class="flip 7">  
-            <div class="card 7">
-                <!-- 앞면 -->
-                <div class="front">7번 정답 카드</div>
-                <!-- 뒷면 -->
-                <div class="back">?</div>
-            </div>
-        </div>
-        <div class="flip 2">  
-            <div class="card 2">
-                <!-- 앞면 -->
-                <div class="front">2번 정답 카드</div>
-                <!-- 뒷면 -->
-                <div class="back">?</div>
-            </div>
-        </div>
-        <div class="flip 4">  
-            <div class="card 4">
-                <!-- 앞면 -->
-                <div class="front">4번 문제 카드</div>
-                <!-- 뒷면 -->
-                <div class="back">?</div>
-            </div>
-        </div>
-        <div class="flip 5">  
-            <div class="card 5">
-                <!-- 앞면 -->
-                <div class="front">5번 정답 카드</div>
-                <!-- 뒷면 -->
-                <div class="back">?</div>
-            </div>
-        </div>
-        <div class="flip 6">  
-            <div class="card 6">
-                <!-- 앞면 -->
-                <div class="front">6번 문제 카드</div>
-                <!-- 뒷면 -->
-                <div class="back">?</div>
-            </div>
-        </div>
-        <div class="flip 4">  
-            <div class="card 4">
-                <!-- 앞면 -->
-                <div class="front">4번 정답 카드</div>
-                <!-- 뒷면 -->
-                <div class="back">?</div>
-            </div>
-        </div>
-        <div class="flip 7">  
-            <div class="card 7">
-                <!-- 앞면 -->
-                <div class="front">7번 문제 카드</div>
-                <!-- 뒷면 -->
-                <div class="back">?</div>
-            </div>
-        </div>
-    </div>
+    <!-- 원정선 추가 끝 -->
     {% endblock %}
-
-    <script>
-        var game_status = false;
-        var click_count = 0;
-        var click_element = Array();
-        var total_click = 0;
-        var double_check = true;
-        var success_num = 0;
-
-        function game_start() {
-
-            if(confirm("이제부터 3초 동안 카드가 보여집니다!\n외울 준비가 되었으면 확인 버튼을 눌러주세요!!")) {
-                $(".card_lobby").hide();
-                $(".card_main").show();
-
-                setTimeout(function() {
-                    game_status = true;
-                    click_count = 0;
-                    click_element = Array();
-                    total_click = 0;
-                    $(".card").css("transform", "rotateY(180deg)");
-                }, 3000);
-            }
-        }
-        //카드 클릭
-        $(".card").click(function(){
-            $(this).attr("disabled", true);
-            if(double_check) {
-                if(game_status) {
-                    total_click++;
-                    if(click_count == 0) {
-                        $(this).css("transform", "");
-                        click_element.push($(this));
-                        click_count = 1;
-                    } else if(click_count == 1) {
-                        $(this).css("transform", "");
-                        click_element.push($(this));
-                        card_success_check();
-                    }
-                }
-            }
-            $(this).attr("disabled", false);
-        });
-
-        //정답 확인
-        function card_success_check() {
-            double_check = false;
-            setTimeout(function() {
-                //정답 대조
-                if(click_element[0].attr('class').split(" ")[1] == click_element[1].attr('class').split(" ")[1]) {
-                    //정답 카운트
-                    success_num++;
-                    click_element[0].children(".front").css("background", "green");
-                    click_element[1].children(".front").css("background", "green");
-
-                    if(success_num == 8) {
-                        alert("게임 클리어!\n총 클릭 횟수:"+total_click);
-                    }
-                } else {
-                    click_element[0].css("transform", "rotateY(180deg)");
-                    click_element[1].css("transform", "rotateY(180deg)");
-                }
-                click_count = 0;
-                click_element = Array();
-
-                double_check = true;
-            }, 1000);
-        }
-    </script>
 </body>
 </html>
