로그인 및 메인맵

--- a/redThon/templates/register.html
+++ b/redThon/templates/register.html
@@ -41,9 +41,13 @@
                     <label for="age">나이는? (ex. 0세)</label>
                     <input type="text" class="form-control" id="age" placeholder="나이는? (ex. 0세)" name="age"/>
                 </div>
-                <button type="submit" class="btn btn-primary" style="background-color: #D94925; border-color:#D94925">제출</button>
+                <button type="submit" class="btn btn-primary" id="test" style="background-color: #D94925; border-color:#D94925">제출</button>
             </form>
         </div>
         </div>
+
+    <py-script>
+     
+    </py-script>    
 </body>
 </html>
