--- a/redThon/templates/register.html
+++ b/redThon/templates/register.html
@@ -7,47 +7,83 @@
         <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
         <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
         <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
+        <script defer src="https://pyscript.net/alpha/pyscript.js"></script>    
     </head>
-<body>
-    <div class = "container">
-        <div class="row mt-5">
-            <h3>회원가입</h3>
-        </div>
+    <body>
+        <py-script>
+            def function_regist(*args):
+                username = Element("username")
+                userid = Element("userid") 
+                password = Element("password") 
+                re_password = Element("re_password") 
+                quiz = Element("quiz")
+                age = Element("age")
 
-        <div class="col-12">
-            <br>
-            <form method="POST" >
-                <div class="form-group">
-                    <label for="userid">아이디</label>
-                    <input type="text" class="form-control" id="userid" placeholder="아이디" name="userid"/>
-                </div>
-                <div class="form-group">
-                    <label for="password">비밀번호</label>
-                    <input type="password" class="form-control" id="password" placeholder="비밀번호" name="password"/>
-                </div>
-                <div class="form-group">
-                    <label for="re_password">비밀번호 확인</label>
-                    <input type="password" class="form-control" id="re_password" placeholder="비밀번호 확인" name="re_password"/>
-                </div>
-                <div class="form-group">
-                    <label for="email">이메일</label>
-                    <input type="email" class="form-control" id="email" placeholder="이메일" name="email"/>
-                </div>
-                <div class="form-group">
-                    <label for="quiz">자신의 보물 제 1호는?</label>
-                    <input type="text" class="form-control" id="quiz" placeholder="자신의 보물 제 1호는?" name="quiz"/>
-                </div>
-                <div class="form-group">
-                    <label for="age">나이는? (ex. 0세)</label>
-                    <input type="text" class="form-control" id="age" placeholder="나이는? (ex. 0세)" name="age"/>
-                </div>
-                <button type="submit" class="btn btn-primary" id="test" style="background-color: #D94925; border-color:#D94925">제출</button>
-            </form>
-        </div>
-        </div>
+                un_status = Element("un_status")
+                ui_status = Element("ui_status")
+                pw_status = Element("pw_status")
+                repw_status = Element("repw_status")
+                quiz_status = Element("quiz_status")
+                age_status = Element("age_status")
 
-    <py-script>
-     
-    </py-script>    
-</body>
+                if username.value == "" :
+                    un_status.element.innerText = "ⓘ 이름을 입력해주세요."
+                elif userid.value == "" :
+                    status.element.innerText = "ⓘ 아이디를 입력해주세요."
+                elif password.value == "" :
+                    pw_status.element.innerText = "ⓘ 비밀번호를 입력해주세요."
+                elif password.value != re_password.value :
+                    repw_status.element.innerText = "ⓘ 비밀번호가 일치하지 않습니다."
+                elif quiz.value == "" :
+                    quiz_status.element.innerText = "ⓘ 보물 제 1호를 입력해주세요."
+                elif age.value == "" :
+                    age_status.element.innerText = "ⓘ 나이를 입력해주세요."
+ 
+        </py-script>   
+
+        <main class = "container">
+        <div class = "container">
+            <div class="row mt-5">
+                <h3>회원가입</h3>
+            </div>
+
+            <div class="col-12">
+                <br>
+                <form method="POST" >
+                    <div class="form-group">
+                        <label for="username">이름</label>
+                        <input type="text" class="form-control" id="username" placeholder="이름" name="username"/>
+                        <span id="un_status" style="color:red;font-size:12px;"></span>
+                    </div>
+                    <div class="form-group">
+                        <label for="userid">아이디</label>
+                        <input type="text" class="form-control" id="userid" placeholder="아이디" name="userid"/>
+                        <span id="ui_status" style="color:red;font-size:12px;"></span>
+                    </div>
+                    <div class="form-group">
+                        <label for="password">비밀번호</label>
+                        <input type="password" class="form-control" id="password" placeholder="비밀번호" name="password"/>
+                        <span id="pw_status" style="color:red;font-size:12px;"></span>
+                    </div>
+                    <div class="form-group">
+                        <label for="re_password">비밀번호 확인</label>
+                        <input type="password" class="form-control" id="re_password" placeholder="비밀번호 확인" name="re_password"/>
+                        <span id="repw_status" style="color:red;font-size:12px;"></span>
+                    </div>
+                    <div class="form-group">
+                        <label for="quiz">자신의 보물 제 1호는?</label>
+                        <input type="text" class="form-control" id="quiz" placeholder="자신의 보물 제 1호는?" name="quiz"/>
+                        <span id="quiz_status" style="color:red;font-size:12px;"></span>
+                    </div>
+                    <div class="form-group">
+                        <label for="age">나이는? (ex. 0세)</label>
+                        <input type="text" class="form-control" id="age" placeholder="나이는? (ex. 0세)" name="age"/>
+                        <span id="age_status" style="color:red;font-size:12px;"></span>
+                    </div>
+                    <button type="submit"  pys-onClick ="function_regist" class="btn btn-primary" id="test" style="background-color: #D94925; border-color:#D94925">회원가입</button>
+                </form>
+            </div>
+        </div>
+        </main> 
+    </body>
 </html>
