로그인 회원가입 DB연동2

--- a/redThon/templates/index.html
+++ b/redThon/templates/index.html
@@ -19,6 +19,13 @@
       font-weight:700;
     }
   </style>
+  {%with messages = get_flashed_messages()%}
+  {%if messages %}
+    <script type="text/javascript">
+      alert("{{messages[-1]}}");
+    </script>
+    {%endif%}
+  {%endwith%}
   </head>
   <body>
     <py-script>
