카드 게임 추가 및 아이디 비밀번호 찾기 수정

--- a/redThon/templates/test_image.html
+++ b/redThon/templates/test_image.html
@@ -34,36 +34,36 @@
     <img id="cookie2" src="../static/img/cookie2.png" onClick="move_cookie2()"
     style="position: absolute;  left: 40%; top: 80%;" 
     width=6% height=12% alt ="cookie2.png"><br>
-    <img id="cookie3" src="../static/img/cookie3.png" onClick="move_cookie3()"
+    <a href="{{ url_for('game') }}"><img id="cookie3" src="../static/img/cookie3.png" onClick="move_cookie3()"
     style="position: absolute;  left: 31%; top: 70%;" 
-    width=8% height=15% alt ="cookie3.png"><br>
+    width=8% height=15% alt ="cookie3.png"></a><br>
     <img id="cookie4" src="../static/img/cookie4.png" onClick="move_cookie4()"
     style="position: absolute;  left: 42%; top: 61%;" 
     width=7% height=14% alt ="cookie4.png"><br>
     <img id="cookie5" src="../static/img/cookie5.png" onClick="move_cookie5()"
     style="position: absolute;  left: 51%; top: 63%;" 
     width=6% height=12%  alt ="cookie5.png"><br>
-    <img id="cookie6" src="../static/img/cookie6.png" onClick="move_cookie6()"
+    <a href="{{ url_for('game') }}"><img id="cookie6" src="../static/img/cookie6.png" onClick="move_cookie6()"
     style="position: absolute;  left: 60%; top: 56%;" 
-    width=9% height=15% alt ="cookie6.png"><br>
+    width=9% height=15% alt ="cookie6.png"></a><br>
     <img id="cookie7" src="../static/img/cookie7.png" onClick="move_cookie7()"
     style="position: absolute;  left: 49%; top: 46%;" 
     width=8% height=14% alt ="cookie7.png"><br>
     <img id="cookie8" src="../static/img/cookie8.png" onClick="move_cookie8()"
     style="position: absolute;  left: 40%; top: 48%;" 
     width=7% height=12.5% alt ="cookie8.png"><br>
-    <img id="cookie9" src="../static/img/cookie9.png" onClick="move_cookie9()"
+    <a href="{{ url_for('game') }}"><img id="cookie9" src="../static/img/cookie9.png" onClick="move_cookie9()"
     style="position: absolute;  left: 30%; top: 39%;" 
-    width=8% height=15% alt ="cookie9.png"><br>
+    width=8% height=15% alt ="cookie9.png"></a><br>
     <img id="cookie10" src="../static/img/cookie10.png" onClick="move_cookie10()"
     style="position: absolute;  left: 40%; top: 30%;" 
     width=6.5% height=13%  alt ="cookie10.png"><br>
     <img id="cookie11" src="../static/img/cookie11.png" onClick="move_cookie11()"
     style="position: absolute;  left: 50%; top: 32%;" 
     width=6% height=12%  alt ="cookie11.png"><br>
-    <img id="cookie12" src="../static/img/cookie12.png" onClick="move_cookie12()"
+    <a href="{{ url_for('game') }}"><img id="cookie12" src="../static/img/cookie12.png" onClick="move_cookie12()"
     style="position: absolute;  left: 58%; top: 30%;" 
-    width=9.5% height=17%  alt ="cookie12.png"><br>
+    width=9.5% height=17%  alt ="cookie12.png"></a><br>
     <img id="cookie13" src="../static/img/cookie13.png" onClick="move_cookie13()"
     style="position: absolute; left: 57%; top: 15%;" 
     width=7% height=13%  alt ="cookie13.png"><br>
