--- a/redThon/templates/test_image.html
+++ b/redThon/templates/test_image.html
@@ -8,6 +8,7 @@
     </script>
 </head>
 <body>
+    <input type="button" onclick="location.href='/logout';" value="임시 로그아웃 버튼" style="width:200px;position:fixed;"/>
     <div style="background-image: url('../static/img/background.png');background-repeat: repeat;width: 100%;height: 100%;"></div>
     <!-- 기본 이미지들 -->
     <img src="../static/img/way.png" 
